--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,9 +107,9 @@ endif()
 # Availability of rocm_check_target_ids command assures that we can also build
 # for gfx90a target
 if(COMMAND rocm_check_target_ids)
-  set(DEFAULT_AMDGPU_TARGETS "gfx900:xnack-;gfx906:xnack-;gfx908:xnack-;gfx908:xnack+;gfx90a:xnack-;gfx90a:xnack+")
+  set(DEFAULT_AMDGPU_TARGETS "gfx908:xnack-;gfx908:xnack+;gfx90a:xnack-;gfx90a:xnack+")
 else()
-  set(DEFAULT_AMDGPU_TARGETS "gfx900;gfx906;gfx908;gfx908")
+  set(DEFAULT_AMDGPU_TARGETS "gfx908;gfx90a")
 endif()
 set(TARGETS "${DEFAULT_AMDGPU_TARGETS}" CACHE STRING "List of specific machine types for library to target")
 
