--- a/scripts/run_rochpl.in
+++ b/scripts/run_rochpl.in
@@ -97,6 +97,7 @@ frac=0.6
 
 filename=HPL.dat
 inputfile=false
+matrixfiles=false
 cmdrun=false
 
 export LD_LIBRARY_PATH=${rocblas_dir}:${blas_dir}:${rocm_dir}/lib:$LD_LIBRARY_PATH
@@ -110,7 +111,7 @@ oversubscribe=true
 # check if we have a modern version of getopt that can handle whitespace and long parameters
 getopt -T
 if [[ $? -eq 4 ]]; then
-  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,help,version, --options hP:Q:p:q:N:i:f: -- "$@")
+  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,matrix_dir::,help,version, --options hP:Q:p:q:N:i:f: -- "$@")
 else
   echo "Need a new version of getopt"
   exit 1
@@ -155,6 +156,10 @@ while true; do
         shift 2 ;;
     -f)
         frac=${2}
+        shift 2 ;;
+    --matrix_dir)
+        matrix_dir_name=${2}
+        matrixfiles=true
         shift 2 ;;
     -i)
         filename=${2}
@@ -404,6 +409,10 @@ if [[ "${inputfile}" == true ]]; then
   rochpl_args+=" -i ${filename}"
 else
   rochpl_args+=" -N ${N} -NB ${NB}"
+fi
+
+if [[ "${matrixfiles}" == true ]]; then
+    rochpl_args="${rochpl_args} --matrix_dir ${matrix_dir_name}"
 fi
 
 #run
