added refine blocks option to script, added timing for redistribution

--- a/scripts/run_rochpl.in
+++ b/scripts/run_rochpl.in
@@ -95,6 +95,7 @@ N=45312
 NB=384
 frac=0.6
 matrix_dir_type=row_block_dirs
+refine_blocks_fac=1
 
 filename=HPL.dat
 inputfile=false
@@ -112,7 +113,7 @@ oversubscribe=true
 # check if we have a modern version of getopt that can handle whitespace and long parameters
 getopt -T
 if [[ $? -eq 4 ]]; then
-  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,matrix_dir:,matrix_dir_type:,help,version, --options hP:Q:p:q:N:i:f: -- "$@")
+  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,matrix_dir:,matrix_dir_type:,refine_blocks_factor:,help,version, --options hP:Q:p:q:N:i:f: -- "$@")
 else
   echo "Need a new version of getopt"
   exit 1
@@ -164,6 +165,9 @@ while true; do
         shift 2 ;;
     --matrix_dir_type)
         matrix_dir_type=${2}
+        shift 2 ;;
+    --refine_blocks_factor)
+        refine_blocks_fac=${2}
         shift 2 ;;
     -i)
         filename=${2}
@@ -416,7 +420,7 @@ else
 fi
 
 if [[ "${matrixfiles}" == true ]]; then
-    rochpl_args="${rochpl_args} --matrix_dir ${matrix_dir_name} --matrix_dir_type ${matrix_dir_type}"
+    rochpl_args="${rochpl_args} --matrix_dir ${matrix_dir_name} --matrix_dir_type ${matrix_dir_type} --refine_blocks_factor ${refine_blocks_fac}"
 fi
 
 #run
