preliminary regex find-and-replace for cuda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,6 @@ option(HPL_VERBOSE_PRINT   "Enable printing to terminal during run" OFF)
 option(HPL_PROGRESS_REPORT "Enable printing progess report to terminal during run" OFF)
 option(HPL_DETAILED_TIMING "Enable detailed timers during run" OFF)
 
-option(ROCM_PATH "Path to ROCm install" /opt/rocm)
 option(HPL_BLAS_DIR "Path to CPU BLAS library" ${CMAKE_CURRENT_SOURCE_DIR}/tpl/openblas)
 option(HPL_MPI_DIR  "Path to MPI library" ${CMAKE_CURRENT_SOURCE_DIR}/tpl/openmpi)
 
@@ -39,8 +38,7 @@ set(CMAKE_INSTALL_PREFIX "rocHPL" CACHE PATH "Install path prefix, prepended ont
 
 # CMake modules
 list(APPEND CMAKE_MODULE_PATH
-     ${CMAKE_CURRENT_SOURCE_DIR}/cmake
-     ${ROCM_PATH}/hip/cmake)
+     ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 # Set a default build type if none was specified
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
@@ -55,7 +53,7 @@ if(POLICY CMP0066)
 endif()
 
 # rocHPL project
-project(rochpl LANGUAGES CXX)
+project(ornlhpl LANGUAGES CUDA)
 
 # Build flags
 set(CMAKE_CXX_STANDARD 11)
@@ -80,109 +78,85 @@ rocm_setup_version(VERSION 6.0.0)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # HPL sources
-file(GLOB_RECURSE rochpl_source RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")
+file(GLOB_RECURSE ornlhpl_source RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")
 
 # HPL device sources
-file(GLOB_RECURSE rochpl_device_source RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*_device.cpp")
-list(REMOVE_ITEM rochpl_source ${rochpl_device_source})
+file(GLOB_RECURSE ornlhpl_device_source RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*_device.cpp")
+list(REMOVE_ITEM ornlhpl_source ${ornlhpl_device_source})
 
 # Flag source files as hip source files
-foreach(i ${rochpl_device_source})
-  set_source_files_properties(${i} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
+foreach(i ${ornlhpl_device_source})
+    set_source_files_properties(${i} LANGUAGE CUDA)
 endforeach()
 
-# HIP flags workaround while target_compile_options does not work
-list(APPEND HIP_HIPCC_FLAGS "-Wno-unused-command-line-argument -fPIE")
-list(APPEND CMAKE_HOST_FLAGS "")
-
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-  list(APPEND HIP_HIPCC_FLAGS "-g -ggdb")
-  list(APPEND CMAKE_HOST_FLAGS "-O0;-g")
-else()
-  list(APPEND HIP_HIPCC_FLAGS "-O3 -march=native -ffp-contract=fast -ffast-math -funsafe-math-optimizations")
-  list(APPEND CMAKE_HOST_FLAGS "-O3;-march=native")
-endif()
+list(APPEND CMAKE_HOST_FLAGS "-march=native")
 
 
 # Availability of rocm_check_target_ids command assures that we can also build
 # for gfx90a target
-if(COMMAND rocm_check_target_ids)
-  set(DEFAULT_AMDGPU_TARGETS "gfx900:xnack-;gfx906:xnack-;gfx908:xnack-;gfx908:xnack+;gfx90a:xnack-;gfx90a:xnack+")
-else()
-  set(DEFAULT_AMDGPU_TARGETS "gfx900;gfx906;gfx908;gfx908")
+if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
+    set(CMAKE_CUDA_ARCHITECTURES 70)
 endif()
-set(TARGETS "${DEFAULT_AMDGPU_TARGETS}" CACHE STRING "List of specific machine types for library to target")
-
-# AMD targets
-foreach(target ${TARGETS})
-  list(APPEND HIP_HIPCC_FLAGS "--amdgpu-target=${target}")
-endforeach()
 
 # Target executable
-hip_add_executable(rochpl ${rochpl_source} ${rochpl_device_source})
+add_executable(ornlhpl ${ornlhpl_source} ${ornlhpl_device_source})
 
-target_compile_options(rochpl PRIVATE ${CMAKE_HOST_FLAGS})
+target_compile_options(ornlhpl PRIVATE ${CMAKE_HOST_FLAGS})
 
 if(HPL_DEBUG)
-  target_compile_definitions(rochpl PRIVATE HPL_DEBUG)
+  target_compile_definitions(ornlhpl PRIVATE HPL_DEBUG)
 endif()
 
 if(HPL_VERBOSE_PRINT)
-  target_compile_definitions(rochpl PRIVATE HPL_VERBOSE_PRINT)
+  target_compile_definitions(ornlhpl PRIVATE HPL_VERBOSE_PRINT)
 endif()
 
 if(HPL_DETAILED_TIMING)
-  target_compile_definitions(rochpl PRIVATE HPL_DETAILED_TIMING)
+  target_compile_definitions(ornlhpl PRIVATE HPL_DETAILED_TIMING)
 endif()
 
 if(HPL_PROGRESS_REPORT)
-  target_compile_definitions(rochpl PRIVATE HPL_PROGRESS_REPORT)
+  target_compile_definitions(ornlhpl PRIVATE HPL_PROGRESS_REPORT)
 endif()
 
 # Target include directories
-target_include_directories(rochpl
+target_include_directories(ornlhpl
                            PRIVATE
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                            $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
                            $<BUILD_INTERFACE:${HIP_INCLUDE_DIRS}>
-                           $<BUILD_INTERFACE:${HPL_MPI_DIR}/include>
-                           $<BUILD_INTERFACE:${ROCM_PATH}/include/roctracer>)
-
-#HIP
-target_link_libraries(rochpl PRIVATE hip::host)
+                           $<BUILD_INTERFACE:${HPL_MPI_DIR}/include>)
+                       #                           $<BUILD_INTERFACE:${ROCM_PATH}/include/roctracer>)
 
 # MPI
-target_link_libraries(rochpl PRIVATE MPI::MPI_CXX)
+target_link_libraries(ornlhpl PRIVATE MPI::MPI_CXX)
 
 # OpenMP
-target_link_libraries(rochpl PRIVATE OpenMP::OpenMP_CXX)
+target_link_libraries(ornlhpl PRIVATE OpenMP::OpenMP_CXX)
 
 # Target link libraries
-target_link_libraries(rochpl PRIVATE BLAS::BLAS)
-target_link_libraries(rochpl PRIVATE roc::rocblas)
-target_link_libraries(rochpl PRIVATE roc::roctracer)
-target_link_libraries(rochpl PRIVATE roc::roctx)
+target_link_libraries(ornlhpl PRIVATE BLAS::BLAS)
+target_link_libraries(ornlhpl PRIVATE cublas)
+target_link_libraries(ornlhpl PRIVATE nvtx)
 
 # Target properties
-set_target_properties(rochpl PROPERTIES VERSION ${rochpl_VERSION})
-set_target_properties(rochpl PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+set_target_properties(ornlhpl PROPERTIES VERSION ${ornlhpl_VERSION})
+set_target_properties(ornlhpl PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
-set_target_properties(rochpl PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(ornlhpl PROPERTIES LINKER_LANGUAGE CUDA)
 
-target_link_options(rochpl PRIVATE "-fopenmp")
-
-set_target_properties(rochpl PROPERTIES HIP_ARCHITECTURES "${DEFAULT_AMDGPU_TARGETS}")
+target_link_options(ornlhpl PRIVATE "-fopenmp")
 
 # Configure a header file to pass the rocHPL version
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/include/hpl_version.hpp.in"
                "${PROJECT_BINARY_DIR}/include/hpl_version.hpp")
 
 # Configure run scripts
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/scripts/run_rochpl.in"
-               "${CMAKE_BINARY_DIR}/run_rochpl"
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/scripts/run_ornlhpl.in"
+               "${CMAKE_BINARY_DIR}/run_ornlhpl"
                @ONLY)
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/scripts/mpirun_rochpl.in"
-               "${CMAKE_BINARY_DIR}/mpirun_rochpl"
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/scripts/mpirun_ornlhpl.in"
+               "${CMAKE_BINARY_DIR}/mpirun_ornlhpl"
                @ONLY)
 
 #move input file
@@ -190,9 +164,9 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/scripts/HPL.dat
      DESTINATION ${CMAKE_BINARY_DIR})
 
 # Install targets
-rocm_install_targets(TARGETS rochpl)
+rocm_install_targets(TARGETS ornlhpl)
 
-install(PROGRAMS ${CMAKE_BINARY_DIR}/run_rochpl ${CMAKE_BINARY_DIR}/mpirun_rochpl
+install(PROGRAMS ${CMAKE_BINARY_DIR}/run_ornlhpl ${CMAKE_BINARY_DIR}/mpirun_ornlhpl
         DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(FILES ${CMAKE_BINARY_DIR}/HPL.dat
         DESTINATION ${CMAKE_INSTALL_PREFIX})
@@ -209,9 +183,5 @@ endif()
 set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "\${CPACK_PACKAGING_INSTALL_PREFIX}" "\${CPACK_PACKAGING_INSTALL_PREFIX}/include")
 
 # Package name
-set(package_name rochpl)
+set(package_name ornlhpl)
 
-rocm_create_package(
-  NAME ${package_name}
-  DESCRIPTION "Radeon Open Compute HPL application"
-  MAINTAINER "Noel Chalmers")
