--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,10 @@ elseif(HPL_BUILD_FOR_OMNITRACE)
         )
     add_custom_target(rochpl_omnitrace_exec ALL
         DEPENDS "${CMAKE_BINARY_DIR}/bin/rochpl-${PROJECT_VERSION}.inst")
+elseif(HPL_BUILD_FOR_ROCPROF)
+    message(WARNING "Building for rocprof trace")
+    set(ROCHPL_BIN "${CMAKE_INSTALL_PREFIX}/bin/rochpl-${PROJECT_VERSION}")
+    add_compile_definitions(HPL_BUILD_FOR_ROCPROF)
 else()
     set(ROCHPL_BIN "${CMAKE_INSTALL_PREFIX}/bin/rochpl-${PROJECT_VERSION}")
 endif()
