--- a/scripts/run_rochpl.in
+++ b/scripts/run_rochpl.in
@@ -100,6 +100,10 @@ use_mpi_lbcast=false
 use_mpi_allreduce_dmxswp=false
 use_mpi_scatterv=false
 use_mpi_allgatherv=false
+rocprof_trace_run=false
+hpct_trace_run=false
+trace_output_path="."
+num_ranks_traced=1
 
 filename=HPL.dat
 inputfile=false
@@ -118,7 +122,7 @@ oversubscribe=true
 # check if we have a modern version of getopt that can handle whitespace and long parameters
 getopt -T
 if [[ $? -eq 4 ]]; then
-  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,help,version,output_file:,use_mpi_lbcast,use_mpi_allreduce_dmxswp,use_mpi_scatterv,use_mpi_allgatherv --options hP:Q:p:q:N:i:f:o: -- "$@")
+  GETOPT_PARSE=$(getopt --name "${0}" --longoptions NB:,help,version,output_file:,use_mpi_lbcast,use_mpi_allreduce_dmxswp,use_mpi_scatterv,use_mpi_allgatherv,rocprof,hpct,trace_output_path:,num_ranks_traced: --options hP:Q:p:q:N:i:f:o: -- "$@")
 else
   echo "Need a new version of getopt"
   exit 1
@@ -184,6 +188,18 @@ while true; do
     --use_mpi_allgatherv)
         use_mpi_allgatherv=true
         shift ;;
+    --rocprof)
+        rocprof_trace_run=true
+        shift ;;
+    --hpct)
+        hpct_trace_run=true
+        shift ;;
+    --trace_output_path)
+        trace_output_path=${2}
+        shift 2 ;;
+    --num_ranks_traced)
+        num_ranks_traced=${2}
+        shift 2 ;;
     --) shift ; break ;;
     *)  echo "Unexpected command line parameter received; aborting";
         exit 1
@@ -453,5 +469,19 @@ if [[ "${use_mpi_allgatherv}" == true ]]; then
     rochpl_args+=" --use_mpi_allgatherv"
 fi
 
+executor=""
+trace_factor=$((globalSize/num_ranks_traced))
+if [[ "${rocprof_trace_run}" == true && ( $((globalRank%trace_factor)) -eq 0 || $globalRank -eq 4 || $globalRank -eq ${Q} ) ]]; then
+    executor="rocprof --roctx-trace --hip-trace -d ${trace_output_path}/${SLURM_PROCID} -o ${trace_output_path}/${SLURM_PROCID}/results.csv"
+elif [[ "${hpct_trace_run}" == true ]]; then
+    executor="hpcrun -o hpctoolkit-measurement-$SLURM_JOB_NAME-$SLURM_JOB_ID -e gpu=amd -e CPUTIME --trace"
+fi
+
 #run
-${rochpl_bin} ${rochpl_args}
+${executor} ${rochpl_bin} ${rochpl_args}
+
+# post-process
+if [[ "${hpct_trace_run}" == true ]]; then
+    hpcstruct hpctoolkit-measurement-$SLURM_JOB_NAME-$SLURM_JOB_ID
+    hpcprof -M stats -o hpctoolkit-database-$SLURM_JOB_NAME-$SLURM_JOB_ID hpctoolkit-measurement-$SLURM_JOB_NAME-$SLURM_JOB_ID
+fi
